--- a/trunk/limehd/res/values/strings.xml
+++ b/trunk/limehd/res/values/strings.xml
@@ -481,4 +481,22 @@
     <!-- AD Message -->
     <string name="ad_zippy">Bluetooth keyboard experienced device\nZIPPY BT-540 Switch Instantaneously Multi-pairing Bluetooth Keyboard - http://www.zippy.com (Sam Lin/sam_lin@hotmail.com)</string>
     
+    <!-- Version 3 UI and Theme String Set -->
+    <!-- Candi/Composing Font Size Options List -->
+    <string name="font_size">Font Size</string>
+	<string-array name="font_size_options">
+		<item>Extermely Large</item>
+		<item>Large</item>
+		<item>Normal</item>
+		<item>Small</item>
+		<item>Extermely Small</item>
+	</string-array>
+	<string-array name="font_size_values">
+		<item>1.2</item>
+		<item>1.1</item>
+		<item>1</item>
+		<item>0.9</item>
+		<item>0.8</item>
+	</string-array>
+	
 </resources>
