--- a/trunk/limehd/res/values-zh-rTW/strings.xml
+++ b/trunk/limehd/res/values-zh-rTW/strings.xml
@@ -471,5 +471,13 @@
 		<item>小</item>
 		<item>特小</item>
 	</string-array>
+	
+	<!-- Vibrate level Options List -->
+    <string name="vibrate_level">震動強度</string>
+	<string-array name="vibrate_level_options">
+		<item>弱</item>
+		<item>中</item>
+		<item>強</item>
+	</string-array>
 
 </resources>
