--- a/trunk/limehd/res/values-zh-rCN/strings.xml
+++ b/trunk/limehd/res/values-zh-rCN/strings.xml
@@ -201,6 +201,7 @@
 	<string-array name="physical_keyboard_options">
 		<item>一般键盘</item>
 		<item>Desire Z</item>
+		<item>ChaCha</item>
 		<item>Milestone</item>
 		<item>Milestone 2</item>
 		<item>Milestone 3</item>
