--- a/trunk/limehd/res/values/strings.xml
+++ b/trunk/limehd/res/values/strings.xml
@@ -518,5 +518,6 @@
 		<item>50</item>
 		<item>60</item>
 	</string-array>
-	
+	<string name="auto_chinese_symbol">Auto fetching Chinese Symbols</string>
+    <string name="auto_chinese_symbol_summary">Fetch Chinese Symbols when no suggestions present</string>
 </resources>
