--- a/trunk/limehd/res/values-zh-rCN/strings.xml
+++ b/trunk/limehd/res/values-zh-rCN/strings.xml
@@ -347,6 +347,7 @@
     <string name="l3_tab_initial_error">下载失败，请确认装置已连上网路.</string>
     <string name="l3_tab_initial_message">请点选 [预载数据库] OR [空白数据库] 键下载 LIME 数据库或点选 [还原数据库] 键由备份文档中还原</string>
     <string name="l3_initial_btn_load_empty_db">空白数据库</string>
+    <string name="l3_initial_btn_load_phonetic_only_db">只含注音数据库</string>
     <string name="l3_initial_btn_load_preload_db">预载数据库</string>
     <string name="l3_initial_btn_reset_db">重置数据库</string>
     <string name="l3_initial_btn_store_to_sdcard">请问您要变更数据库的储存位置至 SDCARD 吗? 在部份机种上可能会产生效能不佳的问题。</string>
