--- a/trunk/limehd/res/values-zh-rTW/strings.xml
+++ b/trunk/limehd/res/values-zh-rTW/strings.xml
@@ -508,4 +508,51 @@
 		<item>6</item>
 	</string-array>
 	
+	<string name="release_note">
+		更新說明\n\n
+	
+		1. 鍵盤文字顯示更新\n
+		2. 新增注音連打功能\n
+		3. 新增字頻資料，改善關聯字顯示順序\n
+		4. 候選字列擴展，點選候選列向下圓型箭頭\n
+		5. 三排鍵自動對應修正\n
+		6. 支援 HTC Flyer 裝置顯示\n
+		7. 支援 Galaxy Tab 裝置顯示\n
+		8. 新增自動中文標點模式設定\n
+		9. 改進初始資料庫選項\n
+		10. 更新預載資料庫內容 (需重新下載)\n
+		11. 輸入效能提昇、臭蟲修正\n
+		12. 支援 ChaCha 鍵盤輸入\n
+		13. 設定字型與鍵盤大小\n
+		14. 震動強度設定\n
+		15. 長按鍵盤鍵選單新增簡繁互換\n
+		16. 鍵盤 Swipe 功能\n
+		    
+		 - Up 跟鍵盤鍵長按一樣的選單\n
+		 - Down 收鍵盤\n
+		 - Right 選候選列預設選項\n
+		 - Left Backspace\n
+		17. 許氏跟倚天26 臭蟲修正\n
+		18. 向下的圓圈圈箭頭，另外實體鍵盤也可展開候選列\n
+		19. 輕鬆輸入法修正\n
+		20. 倚天41鍵注音符號鍵盤更新\n\n
+		 
+		軟體鍵盤快捷鍵\n\n
+		
+		1. 滑動 SPACE BAR 選擇輸入法\n
+		2. 長按 SPACE BAR 顯示輸入法選單與簡繁互換\n
+		3. 按住 SHIFT + (英|數) 鍵 輸入大寫或符號 (Multi-Touch Input)\n\n
+		
+		實體鍵盤快捷鍵\n\n
+		
+		1. (SHIFT|FN) + 候選字右上標記 快速選字\n
+		2. CTRL + SPACE 混打/英文模式切換\n
+		3. CTRL + SHIFT 顯示輸入法選單\n
+		4. MENU + SHIFT 顯示輸入法選單\n
+		5. CTRL + (數字|符號) 鍵 輸入全型字\n
+		6. MENU + / 顯示符號選單\n
+		7. 往下鍵 擴展候選字列表\n
+		8. BACKSPACE 關閉候選字列表\n
+	</string>
+	
 </resources>
